--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+Data/August.csv
+Data/April.csv
+Data/December.csv
+Data/February.csv
+Data/January.csv
+Data/March.csv
+Data/May.csv
+Data/November.csv
+Data/October.csv
+Data/September.csv
